# libEidomatica

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  version.sh
lib/: CImg.h
lib/gco/: GCoptimization.cpp  GCoptimization.h  block.h  energy.h  maxflow.cpp
lib/maxflow/: block.h  energy.h  graph.cpp  graph.h  maxflow.cpp
src/: .gitignore  c_wrapper.cpp  c_wrapper.h  library_link.c  library_link.cpp  library_link.hpp  library_link_utilities.cpp  library_link_utilities.hpp  revision.hpp
src/alg/: alpha_shapes.cpp  alpha_shapes.hpp  bounding_volumes.cpp  bounding_volumes.hpp  components_measurements.hpp  connected_components.cpp  connected_components.hpp  delaunay_triangulation.cpp  delaunay_triangulation.hpp  density.cpp  density.hpp  graphcut.cpp  graphcut.hpp  multi_label_graphcut.cpp  multi_label_graphcut.hpp
src/io/: hdf5_read.cpp  hdf5_read.hpp  hdf5_reader.cpp  hdf5_reader.hpp  hdf5_wrapper.cpp  hdf5_wrapper.hpp
src/maxflow/: graph.h
src/templates/: boundingBox.hpp  circularLinkedList.hpp  circular_linked_list.hpp  image.hpp  list_node.hpp  mask.hpp  maskList.hpp  mask_list.hpp  tensor.hpp
src/utilities/: math_functions.hpp  parameters.cpp  parameters.hpp  utilities.cpp  utilities.hpp  vector_array_2D.cpp  vector_array_2D.hpp
